Fixed bleeding reply form

--- a/assets/css/partials/_messaging.scss
+++ b/assets/css/partials/_messaging.scss
@@ -143,6 +143,7 @@
         background-color: #FFFFFF;
         display: inline-block;
         height: 100%;
+        position: relative;
         vertical-align: top;
         width: 678px;
 
